<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <com.haundianchi.huandianchi.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isShowBack="true"
        app:titleText="填写信息" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_type"
                        android:textColor="@color/register_text"
                        android:textSize="@dimen/small_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="开票说明|开票历史"
                        android:textColor="@color/register_text"
                        android:textSize="@dimen/extra_small_size" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/paper_ticket"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@mipmap/drop_arrow"
                        android:hint="@string/paper_ticket_hint"
                        android:paddingEnd="20dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ticket_info"
                    android:textColor="@color/register_text"
                    android:textSize="@dimen/small_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ticket_content"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ticket_content_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ticket_money"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_money"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ticket_money_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/ticket_property"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_property"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ticket_property_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>
            </LinearLayout>

            <!--收件人信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/receiver_info"
                    android:textColor="@color/register_text"
                    android:textSize="@dimen/small_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/reveive_info"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_receiver_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/receive_info_hint"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/receiver_phone"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/receiver_phone_hint"
                        android:text="15900929016"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/address"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@mipmap/drop_arrow"
                        android:hint="@string/address_hint"
                        android:paddingEnd="20dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/detail_address"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/detail_address_hint"
                        android:textColor="@color/dark_gray"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="邮         箱："
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_ticket_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ticket_mail_hint"
                        android:text="2373775880@qq.com"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="@dimen/common_size" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/send_hint"
                android:textColor="@color/register_text"
                android:textSize="@dimen/extra_small_size" />

            <Button
                android:id="@+id/btn_submit_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/submit"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>